# COMP0087

./: .gitignore  Data exploration.ipynb  Data_Loader.py  LICENSE  Models.py  Net.py  README.md  Test.py  Train.py  bert_hf.py  boris.ipynb  config.json.example  essay_lengths.csv  eval_bert_models.py  eval_glove_models.py  main_chatGPT.py  main_preprocessing.py  merge_ai_data_sets.py  model_bert_cnn.py  model_bert_fc.py  model_bert_lstm.py  model_bert_rnn.py  model_glove_cnn.py  model_glove_lstm.py  model_glove_rnn.py  openai-askquestion.py  openai_gpt_output_detector.py  openai_gpt_output_detector_trained.py  openai_gpt_output_detector_untrained.py  pyproject.toml  train.ipynb
data/prompts/: q1.txt  q2.txt  q7.txt  q8.txt
models/: bert_cnn_best  bert_rnn_128_best  bert_rnn_64_best  bert_rnn_best  glove_cnn_best  glove_rnn_128_best  glove_rnn_64_best  glove_rnn_best
src/: chatGPT_proxied.py  chatGPT_scraper.py  chatGPT_unofficial.py  main.py  main_chatGPT.py
src/benchmarks/: openai_gpt2_detector.py
src/chatGPT/: chatGPT.py  chatGPT_proxied.py  chatGPT_unofficial.py
src/detection_heads/: roberta.py
src/evaluation/: tester.py  testing.py  utils.py  utils_glove.py
src/load/: dataset_hf.py  dataset_loader.py  dataset_torch.py  join_data.py  read_data.py  train_test_split.py
src/models/: bert.py  bert_lstm.py  model_trainer.py  utils.py  utils_glove.py
src/save/: save_response.py
src/tokenization/: bert_hf.py  general_hf_tokenizer.py  ner.py  ner_experimentation.py  ner_masking.py  preprocessing.py
